grid columns minmax

--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ body {
 
 .inputs {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
     grid-template-rows: 1fr 1fr;
     gap: 30px;
 }
@@ -196,7 +196,7 @@ body {
 
 .text-input {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
     grid-template-rows: 40px 62px 40px;
 }
 
